documentacion/obtenida/ARINC 429/driver and software/LX708-1/API/L71W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

L71W32API VOID __stdcall L71_CommWrW(USHORT value,ULONG addrval,HCARD handleval);

L71W32API VOID __stdcall L71_DARClr(USHORT maskval,USHORT addrval,HCARD handleval);

L71W32API BOOL __stdcall L71_DARGet(USHORT maskval,USHORT addrval,HCARD handleval);

L71W32API ULONG __stdcall L71_DARRdL(USHORT addrval,HCARD handleval);

L71W32API USHORT __stdcall L71_DARRdW(USHORT addrval,HCARD handleval);

L71W32API VOID __stdcall L71_DARSet(USHORT maskval,USHORT addrval,HCARD handleval);

L71W32API VOID __stdcall L71_DARWrL(ULONG value,USHORT addrval,HCARD handleval);

L71W32API VOID __stdcall L71_DARWrW(USHORT value,USHORT addrval,HCARD handleval);

L71W32API ULONG __stdcall L71_DescAddr(BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

L71W32API ULONG __stdcall L71_DescAlloc(HCARD handleval);

L71W32API ERRVAL __stdcall L71_DescConfig(ULONG configval,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

L71W32API USHORT __stdcall L71_DescOptRd(BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

L71W32API VOID __stdcall L71_DescOptWr(USHORT descopt,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

L71W32API MSGADDR __stdcall L71_DescPtrRd(BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

L71W32API ULONG __stdcall L71_DescPtrWr(MSGADDR msgaddr,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

L71W32API ULONG __stdcall L71_DescRd(BOOL mcflag,INT taval,BOOL trflag,INT saval,LPUSHORT desc,HCARD handleval);

L71W32API ULONG __stdcall L71_DescWr(BOOL mcflag,INT taval,BOOL trflag,INT saval,LPUSHORT desc,HCARD handleval);

L71W32API ULONG __stdcall L71_Div(ULONG diva,ULONG divb);

L71W32API INT __stdcall L71_DllUsageCount(VOID);

L71W32API USHORT __stdcall L71_DPMMRdW(ULONG addrval,HCARD handleval);

L71W32API VOID __stdcall L71_DPMMWrW(USHORT value,ULONG addrval,HCARD handleval);

L71W32API USHORT __stdcall L71_DPMRdB(ULONG addrval,HCARD handleval);

L71W32API ULONG __stdcall L71_DPMRdL(ULONG addrval,HCARD handleval);

L71W32API VOID __stdcall L71_DPMRdsL(LPULONG valueptr,ULONG addrval,INT countval,HCARD handleval);

L71W32API VOID __stdcall L71_DPMRdsW(LPUSHORT valueptr,ULONG addrval,INT countval,HCARD handleval);

L71W32API USHORT __stdcall L71_DPMRdW(ULONG addrval,HCARD handleval);

L71W32API VOID __stdcall L71_DPMWrB(USHORT value,ULONG addrval,HCARD handleval);

L71W32API VOID __stdcall L71_DPMWrL(ULONG value,ULONG addrval,HCARD handleval);

L71W32API VOID __stdcall L71_DPMWrsL(LPULONG valueptr,ULONG addrval,INT countval,HCARD handleval);

L71W32API VOID __stdcall L71_DPMWrsW(LPUSHORT valueptr,ULONG addrval,INT countval,HCARD handleval);

L71W32API VOID __stdcall L71_DPMWrW(USHORT value,ULONG addrval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_DspBioClear(HCARD handleval);

L71W32API USHORT __stdcall L71_DspBioRd(HCARD handleval);

L71W32API ERRVAL __stdcall L71_DspBioSet(HCARD handleval);

L71W32API ERRVAL __stdcall L71_DspIntfClear(HCARD handleval);

L71W32API BOOL __stdcall L71_DspIntfRead(HCARD handleval);

L71W32API ERRVAL __stdcall L71_DspIntmClear(HCARD handleval);

L71W32API ERRVAL __stdcall L71_DspIntmSet(HCARD handleval);

L71W32API ERRVAL __stdcall L71_DspXfClear(HCARD handleval);

L71W32API ERRVAL __stdcall L71_DspXfSet(HCARD handleval);

L71W32API LPCSTR __stdcall L71_ErrDesc(INT errval);

L71W32API LPCSTR __stdcall L71_ErrDescStr(INT errval);

L71W32API LPCSTR __stdcall L71_ErrName(INT errval);

L71W32API ERRVAL __stdcall L71_ErrorDefine(BOOL busb,USHORT intfreq,HCARD handleval);

L71W32API BOOL __stdcall L71_ExtDinRd(HCARD handleval);

L71W32API VOID __stdcall L71_ExtDinWr(BOOL dinval,HCARD handleval);

L71W32API BOOL __stdcall L71_ExtDoutRd(HCARD handleval);

L71W32API VOID __stdcall L71_ExtDoutWr(BOOL doutval,HCARD handleval);

L71W32API VOID __stdcall L71_FileClose(LPVOID handle);

L71W32API BOOL __stdcall L71_FileErr(VOID);

L71W32API VOID __stdcall L71_FileErrClr(VOID);

L71W32API VOID __stdcall L71_FileErrSet(VOID);

L71W32API LPVOID __stdcall L71_FileOpenRead(LPCSTR filename);

L71W32API LPVOID __stdcall L71_FileOpenWrite(LPCSTR filename);

L71W32API BOOL __stdcall L71_FileRead(LPVOID handle,LPVOID buffer,USHORT count);

L71W32API BOOL __stdcall L71_FileSeek(LPVOID handle,ULONG offset);

L71W32API ULONG __stdcall L71_FileTell(LPVOID handle);

L71W32API BOOL __stdcall L71_FileWrite(LPVOID handle,LPVOID buffer,USHORT count);

L71W32API USHORT __stdcall L71_GetHigh(ULONG val);

L71W32API USHORT __stdcall L71_GetLow(ULONG val);

L71W32API USHORT __stdcall L71_GlobalRdW(USHORT addrval,HCARD handleval);

L71W32API VOID __stdcall L71_GlobalWrW(USHORT value,USHORT addrval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_HandleClose(HCARD handleval);

L71W32API ERRVAL __stdcall L71_HandleDel(HCARD handleval);

L71W32API ERRVAL __stdcall L71_HandleGet(LPSTR cardstr,LPINT cardnum,LPINT devnum,LPULONG sizval,HCARD handleval);

L71W32API HCARD __stdcall L71_HandleIns(LPCSTR cardname,INT cardnum,LPVOID hAppWnd,USHORT uiRemovalMsg);

L71W32API BOOL __stdcall L71_HandleOkay(HCARD handleval);

L71W32API ERRVAL __stdcall L71_HandleOpen(LPCSTR cardname,INT cardnum,HCARD handleval);

L71W32API ERRVAL __stdcall L71_HandleOpenWin95(LPCSTR cardname,INT cardnum,HCARD handleval);

L71W32API ERRVAL __stdcall L71_HandleOpenWinNT(LPCSTR cardname,INT cardnum,HCARD handleval);

L71W32API ERRVAL __stdcall L71_HandleVer(HCARD handleval);

L71W32API ERRVAL __stdcall L71_HandleVerPLX(HCARD handleval);

L71W32API ULONG __stdcall L71_HeapAlloc(ULONG wordcount,HCARD handleval);

L71W32API ULONG __stdcall L71_HeapAllocAll(LPULONG wordcount,HCARD handleval);

L71W32API ULONG __stdcall L71_HeapAllocAllDPM(LPUSHORT wordcount,HCARD handleval);

L71W32API ULONG __stdcall L71_HeapAllocDPM(USHORT wordcount,HCARD handleval);

L71W32API ULONG __stdcall L71_HeapAllocEx(USHORT configval,ULONG wordcount,HCARD handleval);

L71W32API ULONG __stdcall L71_HeapWipe(HCARD handleval);

L71W32API ULONG __stdcall L71_HeapWipeDPM(HCARD handleval);

L71W32API USHORT __stdcall L71_IndirectRd(INT addrval,HCARD handleval);