documentacion/obtenida/ARINC 429/driver and software/LX708-1/API/L71W32NET.VB

    Public Declare Sub L71_CommWrW Lib "L71W32.DLL" Alias "_L71_CommWrW@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub L71_DARClr Lib "L71W32.DLL" Alias "_L71_DARClr@12" (ByVal maskval As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function L71_DARGet Lib "L71W32.DLL" Alias "_L71_DARGet@12" (ByVal maskval As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_DARRdL Lib "L71W32.DLL" Alias "_L71_DARRdL@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_DARRdW Lib "L71W32.DLL" Alias "_L71_DARRdW@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L71_DARSet Lib "L71W32.DLL" Alias "_L71_DARSet@12" (ByVal maskval As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub L71_DARWrL Lib "L71W32.DLL" Alias "_L71_DARWrL@12" (ByVal value As UInt32, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub L71_DARWrW Lib "L71W32.DLL" Alias "_L71_DARWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function L71_DescAddr Lib "L71W32.DLL" Alias "_L71_DescAddr@20" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_DescAlloc Lib "L71W32.DLL" Alias "_L71_DescAlloc@4" (ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_DescConfig Lib "L71W32.DLL" Alias "_L71_DescConfig@24" (ByVal configval As UInt32, ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_DescOptRd Lib "L71W32.DLL" Alias "_L71_DescOptRd@20" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L71_DescOptWr Lib "L71W32.DLL" Alias "_L71_DescOptWr@24" (ByVal descopt As UInt16, ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32)
    Public Declare Function L71_DescPtrRd Lib "L71W32.DLL" Alias "_L71_DescPtrRd@20" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_DescPtrWr Lib "L71W32.DLL" Alias "_L71_DescPtrWr@24" (ByVal msgaddr As UInt32, ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_DescRd Lib "L71W32.DLL" Alias "_L71_DescRd@24" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByRef desc As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_DescWr Lib "L71W32.DLL" Alias "_L71_DescWr@24" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByRef desc As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_Div Lib "L71W32.DLL" Alias "_L71_Div@8" (ByVal diva As UInt32, ByVal divb As UInt32) As UInt32
    Public Declare Function L71_DllUsageCount Lib "L71W32.DLL" Alias "_L71_DllUsageCount@0" () As Int32
    Public Declare Function L71_DPMMRdW Lib "L71W32.DLL" Alias "_L71_DPMMRdW@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L71_DPMMWrW Lib "L71W32.DLL" Alias "_L71_DPMMWrW@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function L71_DPMRdB Lib "L71W32.DLL" Alias "_L71_DPMRdB@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function L71_DPMRdL Lib "L71W32.DLL" Alias "_L71_DPMRdL@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Sub L71_DPMRdsL Lib "L71W32.DLL" Alias "_L71_DPMRdsL@16" (ByRef valueptr As UInt32, ByVal addrval As UInt32, ByVal countval As Int32, ByVal handleval As UInt32)
    Public Declare Sub L71_DPMRdsW Lib "L71W32.DLL" Alias "_L71_DPMRdsW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal countval As Int32, ByVal handleval As UInt32)
    Public Declare Function L71_DPMRdW Lib "L71W32.DLL" Alias "_L71_DPMRdW@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L71_DPMWrB Lib "L71W32.DLL" Alias "_L71_DPMWrB@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub L71_DPMWrL Lib "L71W32.DLL" Alias "_L71_DPMWrL@12" (ByVal value As UInt32, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub L71_DPMWrsL Lib "L71W32.DLL" Alias "_L71_DPMWrsL@16" (ByRef valueptr As UInt32, ByVal addrval As UInt32, ByVal countval As Int32, ByVal handleval As UInt32)
    Public Declare Sub L71_DPMWrsW Lib "L71W32.DLL" Alias "_L71_DPMWrsW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal countval As Int32, ByVal handleval As UInt32)
    Public Declare Sub L71_DPMWrW Lib "L71W32.DLL" Alias "_L71_DPMWrW@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function L71_DspBioClear Lib "L71W32.DLL" Alias "_L71_DspBioClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_DspBioRd Lib "L71W32.DLL" Alias "_L71_DspBioRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function L71_DspBioSet Lib "L71W32.DLL" Alias "_L71_DspBioSet@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_DspIntfClear Lib "L71W32.DLL" Alias "_L71_DspIntfClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_DspIntfRead Lib "L71W32.DLL" Alias "_L71_DspIntfRead@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_DspIntmClear Lib "L71W32.DLL" Alias "_L71_DspIntmClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_DspIntmSet Lib "L71W32.DLL" Alias "_L71_DspIntmSet@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_DspXfClear Lib "L71W32.DLL" Alias "_L71_DspXfClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_DspXfSet Lib "L71W32.DLL" Alias "_L71_DspXfSet@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_ErrDesc Lib "L71W32.DLL" Alias "_L71_ErrDesc@4" (ByVal errval As Int32) As UInt32
    Public Declare Function L71_ErrDescStr Lib "L71W32.DLL" Alias "_L71_ErrDescStr@4" (ByVal errval As Int32) As UInt32
    Public Declare Function L71_ErrName Lib "L71W32.DLL" Alias "_L71_ErrName@4" (ByVal errval As Int32) As UInt32
    Public Declare Function L71_ErrorDefine Lib "L71W32.DLL" Alias "_L71_ErrorDefine@12" (ByVal busb As Int32, ByVal intfreq As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_ExtDinRd Lib "L71W32.DLL" Alias "_L71_ExtDinRd@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub L71_ExtDinWr Lib "L71W32.DLL" Alias "_L71_ExtDinWr@8" (ByVal dinval As Int32, ByVal handleval As UInt32)
    Public Declare Function L71_ExtDoutRd Lib "L71W32.DLL" Alias "_L71_ExtDoutRd@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub L71_ExtDoutWr Lib "L71W32.DLL" Alias "_L71_ExtDoutWr@8" (ByVal doutval As Int32, ByVal handleval As UInt32)
    Public Declare Sub L71_FileClose Lib "L71W32.DLL" Alias "_L71_FileClose@4" (ByVal handle As IntPtr)
    Public Declare Function L71_FileErr Lib "L71W32.DLL" Alias "_L71_FileErr@0" () As Int32
    Public Declare Sub L71_FileErrClr Lib "L71W32.DLL" Alias "_L71_FileErrClr@0" ()
    Public Declare Sub L71_FileErrSet Lib "L71W32.DLL" Alias "_L71_FileErrSet@0" ()
    Public Declare Function L71_FileOpenRead Lib "L71W32.DLL" Alias "_L71_FileOpenRead@4" (ByRef filename As String) As UInt32
    Public Declare Function L71_FileOpenWrite Lib "L71W32.DLL" Alias "_L71_FileOpenWrite@4" (ByRef filename As String) As UInt32
    Public Declare Function L71_FileRead Lib "L71W32.DLL" Alias "_L71_FileRead@12" (ByVal handle As IntPtr, ByVal buffer As IntPtr, ByVal count As UInt16) As Int32
    Public Declare Function L71_FileSeek Lib "L71W32.DLL" Alias "_L71_FileSeek@8" (ByVal handle As IntPtr, ByVal offset As UInt32) As Int32
    Public Declare Function L71_FileTell Lib "L71W32.DLL" Alias "_L71_FileTell@4" (ByVal handle As IntPtr) As UInt32
    Public Declare Function L71_FileWrite Lib "L71W32.DLL" Alias "_L71_FileWrite@12" (ByVal handle As IntPtr, ByVal buffer As IntPtr, ByVal count As UInt16) As Int32
    Public Declare Function L71_GetHigh Lib "L71W32.DLL" Alias "_L71_GetHigh@4" (ByVal val As UInt32) As UInt16
    Public Declare Function L71_GetLow Lib "L71W32.DLL" Alias "_L71_GetLow@4" (ByVal val As UInt32) As UInt16
    Public Declare Function L71_GlobalRdW Lib "L71W32.DLL" Alias "_L71_GlobalRdW@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L71_GlobalWrW Lib "L71W32.DLL" Alias "_L71_GlobalWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function L71_HandleClose Lib "L71W32.DLL" Alias "_L71_HandleClose@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_HandleDel Lib "L71W32.DLL" Alias "_L71_HandleDel@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_HandleGet Lib "L71W32.DLL" Alias "_L71_HandleGet@20" (ByRef cardstr As String, ByRef cardnum As Int32, ByRef devnum As Int32, ByRef sizval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_HandleIns Lib "L71W32.DLL" Alias "_L71_HandleIns@16" (ByRef cardname As String, ByVal cardnum As Int32, ByVal happwnd As IntPtr, ByVal uiremovalmsg As UInt16) As UInt32
    Public Declare Function L71_HandleOkay Lib "L71W32.DLL" Alias "_L71_HandleOkay@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_HandleOpen Lib "L71W32.DLL" Alias "_L71_HandleOpen@12" (ByRef cardname As String, ByVal cardnum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_HandleOpenWin95 Lib "L71W32.DLL" Alias "_L71_HandleOpenWin95@12" (ByRef cardname As String, ByVal cardnum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_HandleOpenWinNT Lib "L71W32.DLL" Alias "_L71_HandleOpenWinNT@12" (ByRef cardname As String, ByVal cardnum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_HandleVer Lib "L71W32.DLL" Alias "_L71_HandleVer@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_HandleVerPLX Lib "L71W32.DLL" Alias "_L71_HandleVerPLX@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_HeapAlloc Lib "L71W32.DLL" Alias "_L71_HeapAlloc@8" (ByVal wordcount As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_HeapAllocAll Lib "L71W32.DLL" Alias "_L71_HeapAllocAll@8" (ByRef wordcount As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_HeapAllocAllDPM Lib "L71W32.DLL" Alias "_L71_HeapAllocAllDPM@8" (ByRef wordcount As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_HeapAllocDPM Lib "L71W32.DLL" Alias "_L71_HeapAllocDPM@8" (ByVal wordcount As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_HeapAllocEx Lib "L71W32.DLL" Alias "_L71_HeapAllocEx@12" (ByVal configval As UInt16, ByVal wordcount As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_HeapWipe Lib "L71W32.DLL" Alias "_L71_HeapWipe@4" (ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_HeapWipeDPM Lib "L71W32.DLL" Alias "_L71_HeapWipeDPM@4" (ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_IndirectRd Lib "L71W32.DLL" Alias "_L71_IndirectRd@8" (ByVal addrval As Int32, ByVal handleval As UInt32) As UInt16
